--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,11 +1,12 @@
-aiohttp==3.12.15
-certifi==2025.8.3
-fastapi==0.116.1
-langchain_core==0.3.75
-langchain_openai==0.3.32
-langgraph==0.6.6
-lxml==6.0.1
-numpy==2.3.2
-python-dotenv==1.1.1
-scikit_learn==1.7.1
+aiohttp==3.13.2
+certifi==2025.11.12
+fastapi==0.127.1
+langchain_core==1.2.5
+langchain_openai==1.1.6
+langgraph==1.0.5
+lxml==6.0.2
+numpy==2.4.0
+python-dotenv==1.2.1
+scikit_learn==1.8.0
 serpapi==0.1.5
+uvicorn==0.40.0
