--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,27 @@
-client/node_modules/
-
-**/node_modules/
-
-server/venv/
-server/.venv/
-venv/
-.venv/
+.env
+.env.local
+.env.*.local
+*.env
+! .env.example
 
 __pycache__/
-**/__pycache__/
-*.py[cod]
-*.pyc
-
-.env
-server/.env
-
-.DS_Store
-.vscode/
-.idea/
-
-.pytest_cache/
-.mypy_cache/
-
-.coverage
-coverage/
-htmlcov/
-
-*.log
-
+.venv
+venv/
 dist/
-build/
-client/dist/
-client/build/
 
-pip-wheel-metadata/
-*.egg-info/
-.eggs/
+node_modules/
+frontend/dist
+*.local
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
+.vscode/*
+!.vscode/extensions.json
+.idea/
+*.swp
+.DS_Store
